# rust_limine_barebones

./: .gitignore  Cargo.toml  LICENSE  README.md  limine.cfg
scripts/: build.sh  build_limine.sh  run_qemu.sh  run_update.sh
src/: main.rs
