[package]
name = "rust_limine_barebones"
version = "0.1.0"
authors = ["Quentincestino <quentindutilleul@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stivale = { git="https://github.com/Andy-Python-Programmer/stivale" }
